--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "morgan": "^1.10.1",
+    "mysql2": "^3.15.3",
     "passport": "^0.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
