--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "project_teamcalender",
+  "name": "project_teamcalendar",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express-session": "^1.18.2",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
+    "nunjucks": "^3.2.4",
     "passport": "^0.7.0"
   },
   "devDependencies": {
