--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql2": "^3.15.3",
     "nunjucks": "^3.2.4",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
